# django-minio-storage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/django_minio_storage/: __init__.py  storage.py
